# latae

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-package.yml  release.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
latae/: parser.py
robotspy/: __init__.py  parser.py  robots.txt
src/robotspy/: parser.py
tests/: test_example.py  test_parser.py
tests/samples/: robots_case_insensitive.txt  robots_comments.txt  robots_crawl_delay.txt  robots_host.txt  robots_host_case_insensitive.txt  robots_multiple_agents.txt  robots_multiple_agents_comments.txt  robots_no_directive.txt  robots_sitemap.txt  robots_sitemap_multiple.txt  robots_sitemap_no_directive.txt
