[metadata]
name = robots.py
version = 0.0.1
author = shadawcraw
description = A simple library to parse and read robots.txt files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shadawcraw/robots.py
project_urls =
    Bug Tracker = https://github.com/shadacraw/robots.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src